Add n-times-derivable to function hierarchy.
	* include/Makefile.am: Add new header files.
	* include/roboptim-core/n-times-derivable-function.hh: New.
	* include/roboptim-core/n-times-derivable-function.hxx: New.
	* tests/Makefile.am: Compile/distribute new test.
	* tests/n-times-derivable-function.cc: New.
	* tests/n-times-derivable-function.stdout: New.
	* tests/testsuite.at: Include new test.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -9,6 +9,8 @@ nobase_include_HEADERS =				\
 	roboptim-core/generic-solver.hh			\
 	roboptim-core/indent.hh				\
 	roboptim-core/linear-function.hh		\
+	roboptim-core/n-times-derivable-function.hh	\
+	roboptim-core/n-times-derivable-function.hxx	\
 	roboptim-core/numeric-quadratic-function.hh	\
 	roboptim-core/numeric-linear-function.hh	\
 	roboptim-core/problem.hh			\
