Fix typo in test suite.
	* tests/Makefile.am: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -87,5 +87,5 @@ EXTRA_DIST +=					\
 	cfsqp.stdout				\
 	numeric-linear-function.stdout		\
 	numeric-quadratic-function.stdout	\
-	n-times-derivable.stdout		\
+	n-times-derivable-function.stdout	\
 	problem-cc.stdout
