--- a/packages/debian/control
+++ b/packages/debian/control
@@ -4,9 +4,16 @@ Priority: optional
 Maintainer: Thomas Moulard <thomas.moulard@gmail.com>
 Build-Depends-Indep: debhelper (>= 4.0.0), autotools-dev
 Standards-Version: 3.6.2
+Homepage: http://roboptim.sourceforge.net/
 
 Package: roboptim-core
-Architecture: all
-Depends: ${shlibs:Depends}
-Description: Generic optimization library.
-
+Architecture: i386
+Depends: libboost-devel (>= 1.34)
+Description: RobOptim core defines a standard C++ interface
+ to define non-linear optimization problems independently
+ of a specific solver.
+ .
+ RobOptim core currently supports problems solving through
+ two solvers:
+ - CFSQP,
+ - Ipopt.
