Use Boost.Tuple instead of Boost.Fusion.
	Rationale: Last LTS Ubuntu (8.04 Hardy) packages Boost 1.34.1, not 1.35
	which is required for Boost.Fusion.
	* configure.ac: Chec Boost.Tuple instead of Boost.Tuple.
	* include/roboptim-core/visualization/gnuplot-function.hh:
	Fix implementation.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -57,10 +57,10 @@ AC_PROG_LIBTOOL
 
 # Search for Boost
 BOOST_FORMAT
-BOOST_FUSION
 BOOST_MPL
 BOOST_OPTIONAL
 BOOST_STATICASSERT
+BOOST_TUPLE
 BOOST_TYPETRAITS
 BOOST_UTILITY
 BOOST_VARIANT
