Remove roboptim-core Ipopt and CFSQP bridges.
	* Makefile.am: Distribute THANKS and TODO.
	* build-aux/acx_pthread.m4: Remove.
	* build-aux/cfsqp.m4: Remove.
	* build-aux/ipopt.m4: Remove.
	* configure.ac: Do not search for Solvers anymore.
	* include/Makefile.am: Remove deleted headers.
	* include/roboptim-core/cfsqp.hh: Remove.
	* include/roboptim-core/fwd.hh: Remove solvers predeclaration.
	* include/roboptim-core/ipopt.hh: Remove.
	* src/Makefile.am: Remove deleted sources.
	* src/cfsqp.cc: Remove.
	* src/ipopt.cc: Remove.
	* src/visualization/gnuplot.cc: Add a missing return statement.
	* tests/Makefile.am: Remove tests on solvers.
	* tests/cfsqp.cc: Remove.
	* tests/cfsqp.stdout: Remove.
	* tests/ipopt-test.stdout: Remove.
	* tests/ipopt.cc: Remove.
	* tests/testsuite.at: Remove tests on solvers.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,7 @@ SUBDIRS = 		\
 
 
 # Provide bootstrap with the generated package.
-EXTRA_DIST = bootstrap build-aux/bootstrap $(PACKAGE_TARNAME).m4
+EXTRA_DIST = bootstrap build-aux/bootstrap $(PACKAGE_TARNAME).m4 THANKS TODO
 
 
 # Nothing to do in this directory.
