Add ltdl include directory to CPPFLAGS.
	* src/Makefile.am: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,8 @@
 include $(top_srcdir)/build-aux/init.mk
 
+# Add ltdl include dir.
+AM_CPPFLAGS += $(INCLTDL)
+
 # Add available warnings flags.
 AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
