--- a/Makefile.am
+++ b/Makefile.am
@@ -29,7 +29,7 @@ edit = $(SED) -e "s|@prefix\@|$(prefix)|"			\
               -e 's,@PACKAGE_TARNAME\@,$(PACKAGE_TARNAME),g'	\
               -e 's,@VERSION\@,$(PACKAGE_VERSION),g'
 
-@PACKAGE_TARNAME@.pc: $(srcdir)/build-aux/pkg-config.pc.in
+@PACKAGE_TARNAME@.pc: $(srcdir)/configure $(srcdir)/build-aux/pkg-config.pc.in
 	$(edit) $(srcdir)/build-aux/pkg-config.pc.in >$@
 
 EXTRA_DIST += build-aux/pkg-config.pc.in
