Make Libtool support more robust.
	* Makefile.am: Regenerate Libtool related files if
	required.
	* configure.ac: Remove obsolete macro.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,10 @@ EXTRA_DIST = bootstrap build-aux/bootstrap $(PACKAGE_TARNAME).m4 THANKS TODO
 # Nothing to do in this directory.
 all:
 
+# Libtool rules
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status --recheck
 
 # Pkg-config generation
 PKG_CONFIG_FILE = @PACKAGE_TARNAME@.pc
