--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -544,7 +544,7 @@ EXCLUDE_PATTERNS       =
 # The symbol name can be a fully qualified name, a word, or if the wildcard * is used,
 # a substring. Examples: ANamespace, AClass, AClass::ANamespace, ANamespace::*Test
 
-EXCLUDE_SYMBOLS        =
+EXCLUDE_SYMBOLS        = roboptim::detail
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or
 # directories that contain example code fragments that are included (see
