--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,25 +1,54 @@
-.PHONY: doc html install-doxygen-html uninstall-doxygen-html
+include $(top_srcdir)/build-aux/init.mk
 
+# Variables.
+EXTRA_DIST += 				\
+	Doxyfile.in 			\
+	header.html 			\
+	footer.html 			\
+	package.css 			\
+	doxygen.css			\
+	tabs.css			\
+	sf-upload.sh.in
+
+CLEANFILES += $(PACKAGE_TARNAME).doxytag
+
+
+.PHONY: doc				\
+	html				\
+	doxygen 			\
+	install-doxygen-html		\
+	uninstall-doxygen-html
+
+# Rules.
 doc: html
 
-html-local: Doxyfile
-	$(DOXYGEN)
+html-local: doxygen
 
-EXTRA_DIST = Doxyfile.in header.html footer.html \
-	package.css doxygen.css tabs.css sf-upload.sh.in
+doxygen: Doxyfile
+	$(DOXYGEN) "$<"
 
-CLEANFILES = $(PACKAGE_TARNAME).doxytag
+# Doxygen generation rule.
+Doxyfile: $(srcdir)/Doxyfile.in
+	$(top_builddir)/config.status --file="$@":"$<" \
+	&& sed -i -e 's/^#.*//' -e '/^$$/d' "$@"
 
+# Clean rule.
 clean-local:
 	rm -rf html latex
 
+# Install rules.
 install-data-local: install-doxygen-html
 uninstall-local: uninstall-doxygen-html
 
 install-doxygen-html: html-local
-	$(mkdir_p) "$(DESTDIR)$(htmldir)/html"
-	cp -rf html/* "$(DESTDIR)$(htmldir)/html"
+	$(mkdir_p) "$(DESTDIR)$(htmldir)"
+	cp -rf html "$(DESTDIR)$(htmldir)"
 	$(INSTALL_DATA) $(PACKAGE_TARNAME).doxytag "$(DESTDIR)$(htmldir)/html"
 
 uninstall-doxygen-html:
 	rm -rf "$(DESTDIR)$(htmldir)"
+
+# --- SourceForge upload script.
+# sf-upload.sh generation rule.
+sf-upload.sh: $(srcdir)/sf-upload.sh.in
+	$(top_builddir)/config.status --file="$@":"$<" && chmod u+x "$@"
