Implement identity function.
	* include/roboptim/core/identity-function.hh: New.
	* src/Makefile.am: Add new source.
	* src/identity-function.cc: New.
	* tests/Makefile.am: Compile new test.
	* tests/identity-function.cc: New.
	* tests/identity-function.stdout: New.
	* tests/testsuite.at: Run new test case.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ libroboptim_core_la_SOURCES = 		\
 	finite-difference-gradient.cc	\
 	function.cc			\
 	generic-solver.cc		\
+	identity-function.cc		\
 	indent.cc			\
 	linear-function.cc		\
 	numeric-linear-function.cc	\
