--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -7,6 +7,7 @@ nobase_include_HEADERS =				\
 	roboptim/core/fwd.hh				\
 	roboptim/core/finite-difference-gradient.hh	\
 	roboptim/core/generic-solver.hh			\
+	roboptim/core/identity-function.hh		\
 	roboptim/core/indent.hh				\
 	roboptim/core/linear-function.hh		\
 	roboptim/core/n-times-derivable-function.hh	\
