Add constant function.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim/core/constant-function.hh: New.
	* src/Makefile.am: Compile constant function.
	* src/constant-function.cc: New.
	* tests/Makefile.am: Add constant function test.
	* tests/constant-function.cc: New.
	* tests/constant-function.stdout: New.
	* tests/problem-cc.cc: Use constant function.
	* tests/testsuite.at: Run test suite.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,6 +2,7 @@ include $(top_srcdir)/build-aux/init.mk
 
 # --- Distribute and install headers.
 nobase_include_HEADERS =				\
+	roboptim/core/constant-function.hh		\
 	roboptim/core/derivable-function.hh		\
 	roboptim/core/function.hh			\
 	roboptim/core/fwd.hh				\
