Require at least Boost 1.37.
	* configure.ac: Check that Boost version is newer
	than 1.37 to allow the use of make_shared.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -63,6 +63,9 @@ AC_CHECK_LIB([ltdl], [lt_dlopen], [],
 
 
 # Search for Boost
+
+# Need 1.37 for boost::make_shared.
+BOOST_REQUIRE(1.37)
 BOOST_FORMAT
 BOOST_MPL
 BOOST_OPTIONAL
