Add parametrized function class.
	* include/Makefile.am: Distribute new header.
	* include/roboptim/core/parametrized-function.hh: New.
	* include/roboptim/core/parametrized-function.hxx: New.
	* tests/Makefile.am: Compile new test.
	* tests/parametrized-function.cc: New.
	* tests/parametrized-function.stdout: New.
	* tests/testsuite.at: Run new test.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -15,6 +15,8 @@ nobase_include_HEADERS =				\
 	roboptim/core/n-times-derivable-function.hxx	\
 	roboptim/core/numeric-quadratic-function.hh	\
 	roboptim/core/numeric-linear-function.hh	\
+	roboptim/core/parametrized-function.hh		\
+	roboptim/core/parametrized-function.hxx		\
 	roboptim/core/problem.hh			\
 	roboptim/core/problem.hxx			\
 	roboptim/core/quadratic-function.hh		\
