Distribute missing stdout file.
	* tests/Makefile.am: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -166,6 +166,7 @@ EXTRA_DIST +=						\
 	problem-cc.stdout				\
 	result.stdout					\
 	simple.stdout					\
+	twice-derivable-function.stdout			\
 	util.stdout					\
 	visualization-gnuplot-function.stdout		\
 	visualization-gnuplot-simple.stdout
