--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,4 +33,5 @@ libroboptim_core_la_LDFLAGS = -version-info 1:1:0
 
 lib_LTLIBRARIES += roboptim-core-dummy-plugin.la
 roboptim_core_dummy_plugin_la_SOURCES = roboptim-core-dummy-plugin.cc
+roboptim_core_dummy_plugin_la_LIBADD = libroboptim-core.la
 roboptim_core_dummy_plugin_la_LDFLAGS = -module -version-info 1:1:0
