Add dllexport/dllimport for Windows compatibility.
	* include/Makefile.am,
	* include/roboptim/core/constant-function.hh,
	* include/roboptim/core/debug.hh,
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/generic-solver.hh,
	* include/roboptim/core/identity-function.hh,
	* include/roboptim/core/indent.hh,
	* include/roboptim/core/io.hh,
	* include/roboptim/core/linear-function.hh,
	* include/roboptim/core/numeric-linear-function.hh,
	* include/roboptim/core/numeric-quadratic-function.hh,
	* include/roboptim/core/portability.hh,ew.
	* include/roboptim/core/quadratic-function.hh,
	* include/roboptim/core/result-with-warnings.hh,
	* include/roboptim/core/result.hh,
	* include/roboptim/core/solver-error.hh,
	* include/roboptim/core/solver-warning.hh,
	* include/roboptim/core/sys.hh,
	* include/roboptim/core/twice-derivable-function.hh: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -20,6 +20,7 @@ nobase_include_HEADERS =				\
 	roboptim/core/numeric-linear-function.hh	\
 	roboptim/core/parametrized-function.hh		\
 	roboptim/core/parametrized-function.hxx		\
+	roboptim/core/portability.hh			\
 	roboptim/core/problem.hh			\
 	roboptim/core/problem.hxx			\
 	roboptim/core/quadratic-function.hh		\
