Update submodules to use new SourceForge URLs.
	* .gitmodules: Update to new URLs.
	* bootstrap: Detect new alias.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "doc"]
-	path = doc
-	url = sourceforge:roboptim
 [submodule "build-aux"]
 	path = build-aux
-	url = sourceforge:roboptim
+	url = roboptim:build-aux
+[submodule "doc"]
+	path = doc
+	url = roboptim:doc
