Add policies to finite-difference gradients computation.
	* include/Makefile.am: Distribute new header.
	* include/roboptim/core/finite-difference-gradient.hh:
	Add policies and template FiniteDifferenceGradient by them.
	* include/roboptim/core/finite-difference-gradient.hxx: New.
	* include/roboptim/core/fwd.hh: Update forward declaration,
	make FivePointsRule the default policy.
	* src/finite-difference-gradient.cc: Implement policies,
	update free functions.
	* tests/finite-difference-gradient.cc: Use new interface,
	check both policies.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -9,6 +9,7 @@ nobase_include_HEADERS =				\
 	roboptim/core/function.hh			\
 	roboptim/core/fwd.hh				\
 	roboptim/core/finite-difference-gradient.hh	\
+	roboptim/core/finite-difference-gradient.hxx	\
 	roboptim/core/generic-solver.hh			\
 	roboptim/core/identity-function.hh		\
 	roboptim/core/indent.hh				\
