Update Doxygen generation rules.
	* .gitmodules: Remove doc submodule.
	* build-aux: Update to new version.
	* doc/Doxyfile.extra: New.
	* doc/Makefile.am: New.
	* doc: Remove.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "build-aux"]
 	path = build-aux
-	url = roboptim:build-aux
-[submodule "doc"]
-	path = doc
-	url = roboptim:doc
+	url = roboptim:build-aux.git
