Use GNU git-version-gen to manage versions.
	* .gitignore: Add ``.version'' and ``.tarball-version''.
	* Makefile.am: Add needed rules.
	* configure.ac: Use build-aux/git-version-gen to get
	version number.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,14 @@ libtool: $(LIBTOOL_DEPS)
 
 include $(top_srcdir)/build-aux/pkg-config.mk
 
-# -- Generate documentation
+# Generate documentation.
 .PHONY: doc html
 doc html:
 	cd doc && $(MAKE) $(AM_MAKEFLAGS) $@
+
+# Update version files when needed.
+BUILT_SOURCES = $(top_srcdir)/.version
+$(top_srcdir)/.version:
+	echo $(VERSION) > $@-t && mv $@-t $@
+dist-hook:
+	echo $(VERSION) > $(distdir)/.tarball-version
