Fix version files generation.
	* Makefile.am: Do no generate ``.version'' in a tarball (as
	user might not have control on source directory, for instance
	when running distcheck).

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,12 @@ doc html:
 
 # Update version files when needed.
 BUILT_SOURCES = $(top_srcdir)/.version
+
+#  Do not generate .version in distributed tarball.
 $(top_srcdir)/.version:
-	echo $(VERSION) > $@-t && mv $@-t $@
+	if ! test -f $(top_srcdir)/.tarball-version; then	\
+	 echo $(VERSION) > $@-t && mv $@-t $@;			\
+	fi
+
 dist-hook:
 	echo $(VERSION) > $(distdir)/.tarball-version
