--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -101,7 +101,8 @@ plugin_LDADD = $(top_builddir)/src/libroboptim-core.la
 
 # finite-difference-gradient
 check_PROGRAMS += finite-difference-gradient
-finite_difference_gradient_SOURCES = finite-difference-gradient.cc $(COMMON_SOURCES)
+finite_difference_gradient_SOURCES = finite-difference-gradient.cc \
+					$(COMMON_SOURCES)
 finite_difference_gradient_LDADD = $(top_builddir)/src/libroboptim-core.la
 
 # identity-function
