Distribute Windows related files.
	Reported by François Keith.
	* Makefile.am: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,9 @@ EXTRA_DIST +=	bootstrap			\
 		THANKS				\
 		TODO
 
+# Distribute Windows specific files.
+EXTRA_DIST += msvc
+
 
 # Nothing to do in this directory.
 all:
