Move common.hh to shared-tests submodule.
	* .gitmodules: Register submodule.
	* tests/Makefile.am: Fix common.hh path and add
	shared-tests to include path.
	* tests/common.hh: Remove.
	* tests/shared-tests: New.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "build-aux"]
 	path = build-aux
 	url = roboptim:build-aux.git
+[submodule "tests/shared-tests"]
+	path = tests/shared-tests
+	url = roboptim:shared-tests
