Add rpm support.
	* Makefile.am: Include rpm generation rule.
	* build-aux: Synchronize.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,3 +29,5 @@ include $(top_srcdir)/build-aux/doc-recursive.mk
 include $(top_srcdir)/build-aux/libtool.mk
 include $(top_srcdir)/build-aux/pkg-config.mk
 include $(top_srcdir)/build-aux/git-version-gen.mk
+
+include $(top_srcdir)/build-aux/rpm.mk
