Update release scripts.
	* Makefile.am: Include new scripts.
	* build-aux: Synchronize.
	* doc/Makefile.am: Fix include path.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,9 +25,15 @@ EXTRA_DIST += msvc
 all:
 
 # Include various rules...
+include $(top_srcdir)/build-aux/announce-gen.mk
+include $(top_srcdir)/build-aux/dist-sign.mk
 include $(top_srcdir)/build-aux/doc-recursive.mk
 include $(top_srcdir)/build-aux/libtool.mk
 include $(top_srcdir)/build-aux/pkg-config.mk
 include $(top_srcdir)/build-aux/git-version-gen.mk
 
 include $(top_srcdir)/build-aux/rpm.mk
+
+
+SF_PROJECT_ID=roboptim
+include $(top_srcdir)/build-aux/sf-release.mk
