--- a/roboptim-core.spec.in
+++ b/roboptim-core.spec.in
@@ -9,7 +9,7 @@ URL: http://roboptim.sourceforge.net/
 Source0: http://dl.sf.net/sourceforge/%{name}/%{name}-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
-BuildRequires: boost-devel, libtool-ltdl-devel
+BuildRequires: boost-devel, libtool-ltdl-devel, doxygen
 
 
 %description
