Make Libtool generate dlls on Windows.
	* configure.ac: Add win32-dll flag to LT_INIT to
	enable dlls building on Microsoft Windows platform.
	It implies that the package can be compiled using
	``-no-undefined''.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -58,7 +58,7 @@ AC_PROG_SED
 JRL_PROG_DOXYGEN
 
 # Search for Libtool.
-LT_INIT([dlopen])
+LT_INIT([dlopen win32-dll])
 
 # Search for libltdl.
 AC_CHECK_LIB([ltdl], [lt_dlopen], [],
