Build plug-in in a separate directory.
	CAUTION: starting now, plug-in will be located in
	in ``$(libdir)/roboptim-core'' which means that
	users have to change LTDL_LIBRARY_PATH accordingly.

	* roboptim-core.spec.in: Include plug-in in rpm.
	* src/Makefile.am: Install plug-in in a separate directory.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/roboptim-core.spec.in
+++ b/roboptim-core.spec.in
@@ -68,12 +68,14 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root,-)
 %{_libdir}/*.so.*
+%{_libdir}/%{name}/*.so.*
 
 
 %files devel
 %defattr(-,root,root,-)
 %{_includedir}/*
 %{_libdir}/*.so
+%{_libdir}/%{name}/*.so
 %{_libdir}/pkgconfig/*
 
 %files doc
