Fix rpm spec file.
	* roboptim-core.spec.in: Remove ``.la'' file of the plug-in.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/roboptim-core.spec.in
+++ b/roboptim-core.spec.in
@@ -60,6 +60,7 @@ make install DESTDIR="$RPM_BUILD_ROOT" INSTALL="install -p"
 
 # Get rid of Libtool files as they should not be installed.
 rm $RPM_BUILD_ROOT/%{_libdir}/*.la
+rm $RPM_BUILD_ROOT/%{_libdir}/%{name}/*.la
 
 
 %clean
