Fix typo in source filename.
	* src/Makefile.am: Fix typo.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,7 +22,7 @@ libroboptim_core_la_SOURCES = 		\
 	quadratic-function.cc		\
 	result.cc			\
 	result-with-warnings.cc		\
-	solver.c			\
+	solver.cc			\
 	solver-error.cc			\
 	solver-warning.cc		\
 	twice-derivable-function.cc	\
