Add Split filter.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim/core/filter/split.hh: New.
	* include/roboptim/core/filter/split.hxx: New.
	* tests/Makefile.am: Compile new test case.
	* tests/split.cc: New.
	* tests/split.stdout: New.
	* tests/testsuite.at: Add new test case.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,14 +2,18 @@ include $(top_srcdir)/build-aux/init.mk
 
 # --- Distribute and install headers.
 nobase_include_HEADERS =				\
+	roboptim/core.hh
+
+nobase_include_HEADERS +=				\
 	roboptim/core/constant-function.hh		\
 	roboptim/core/debug.hh				\
 	roboptim/core/derivable-function.hh		\
 	roboptim/core/derivable-parametrized-function.hh\
-	roboptim/core/function.hh			\
-	roboptim/core/fwd.hh				\
+	roboptim/core/derivative-size.hh		\
 	roboptim/core/finite-difference-gradient.hh	\
 	roboptim/core/finite-difference-gradient.hxx	\
+	roboptim/core/function.hh			\
+	roboptim/core/fwd.hh				\
 	roboptim/core/generic-solver.hh			\
 	roboptim/core/identity-function.hh		\
 	roboptim/core/indent.hh				\
@@ -17,16 +21,16 @@ nobase_include_HEADERS =				\
 	roboptim/core/linear-function.hh		\
 	roboptim/core/n-times-derivable-function.hh	\
 	roboptim/core/n-times-derivable-function.hxx	\
-	roboptim/core/numeric-quadratic-function.hh	\
 	roboptim/core/numeric-linear-function.hh	\
+	roboptim/core/numeric-quadratic-function.hh	\
 	roboptim/core/parametrized-function.hh		\
 	roboptim/core/parametrized-function.hxx		\
 	roboptim/core/portability.hh			\
 	roboptim/core/problem.hh			\
 	roboptim/core/problem.hxx			\
 	roboptim/core/quadratic-function.hh		\
-	roboptim/core/result.hh				\
 	roboptim/core/result-with-warnings.hh		\
+	roboptim/core/result.hh				\
 	roboptim/core/solver-error.hh			\
 	roboptim/core/solver-factory.hh			\
 	roboptim/core/solver-factory.hxx		\
@@ -41,7 +45,9 @@ nobase_include_HEADERS =				\
 # Function filters.
 nobase_include_HEADERS +=				\
 	roboptim/core/filter/cached-function.hh		\
-	roboptim/core/filter/cached-function.hxx
+	roboptim/core/filter/cached-function.hxx	\
+	roboptim/core/filter/split.hh			\
+	roboptim/core/filter/split.hxx
 
 
 # Built-in plug-in.
