Update MSVC project.
	* msvc/roboptim-core/roboptim-core.vcproj:
	Add ``solver.cc'' to files list.
        Reported by François Keith.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

Conflicts:

	ChangeLog

--- a/msvc/roboptim-core/roboptim-core.vcproj
+++ b/msvc/roboptim-core/roboptim-core.vcproj
@@ -250,9 +250,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\solver.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\twice-derivable-function.cc"
 				>
 			</File>
+
 			<File
 				RelativePath="..\..\src\util.cc"
 				>
